workspace = { members = ["k-onfig-derive"] }
[package]
name = "k-onfig"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "For Config Schema"
repository = "https://github.com/kokoro-rs/k-onfig"

[dependencies]
serde = {version = "1.0.197", features = ["derive"]}
[dependencies.k-onfig-derive]
path = "./k-onfig-derive"
version = "0.0.1"
